[project]
name = "xai-discord"
version = "0.1.0"
description = "A Xircuits component library for discord!"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/XpressAI/xai-discord"
keywords = ["xircuits", "discord","Bot"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/DiscordBotBranchExample.xircuits"
requirements_path = "requirements.txt"
